--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,16 @@ version: '3.8'
 
 services:
   
+  tor:
+    image: osminogin/tor-simple
+    container_name: darkweb_tor
+    ports:
+      - "9050:9050" 
+    networks:
+      - cti_net
+    restart: always
+
+
   db:
     image: postgres:15-alpine
     container_name: darkweb_postgres
@@ -29,9 +39,12 @@ services:
     environment:
       # Important: we write host=db. Because in docker-compose, the service name acts as the hostname.
       - DB_SOURCE=host=db port=5432 user=postgres password=postgres dbname=darkweb_db sslmode=disable
+      - TOR_PROXY=socks5://tor:9050
     depends_on:
       db:
         condition: service_healthy # 
+      tor : 
+        condition: service_started
     networks:
       - cti_net
 
